Fixed cosmetic problems.
Signed-off-by: Jiecheng Xu <xjcpdp1995@gmail.com>

--- a/homepage.html
+++ b/homepage.html
@@ -38,8 +38,8 @@
         	<br>
         	<div class="style_time_btn">
         		<label class="game_style"> Bullet: </label>
-				<input type="radio" name="style_time" value="bullet_1+1*1" > Test 1+1*1&nbsp;&nbsp;
-        		<input type="radio" name="style_time" value="bullet_1+0*0" checked> 1+0*0&nbsp;&nbsp;
+        		<input type="radio" name="style_time" value="bullet_1+0*0" > 1+0*0&nbsp;&nbsp;
+				<input type="radio" name="style_time" value="bullet_1+1*1" > 1+1*1&nbsp;&nbsp;
         		<input type="radio" name="style_time" value="bullet_2+1*0"> 2+1*0&nbsp;&nbsp;
         		<br>
         		<label class="game_style">Blitz: </label>
@@ -48,7 +48,7 @@
         		<input type="radio" name="style_time" value="blitz_3+2*0"> 3+2*0&nbsp;&nbsp;
         		<input type="radio" name="style_time" value="blitz_3+2*1"> 3+2*1&nbsp;&nbsp;
         		<input type="radio" name="style_time" value="blitz_5+0*0"> 5+0*0&nbsp;&nbsp;
-        		<input type="radio" name="style_time" value="blitz_5+0*1"> 5+0*1&nbsp;&nbsp;
+        		<input type="radio" name="style_time" value="blitz_5+0*1" checked> 5+0*1&nbsp;&nbsp;
         		<input type="radio" name="style_time" value="blitz_5+3*0"> 5+3*0&nbsp;&nbsp;
         		<input type="radio" name="style_time" value="blitz_5+3*1"> 5+3*1&nbsp;&nbsp;
         		<br>
@@ -80,7 +80,8 @@
 				<br><br>
 				Independent rating game: each board is an independent game. Players win, draw or lose in each board. ELO rating adjusted several times (as games finish) according to the outcome in each board.
 				<br><br>
-				This is a beta version of this website (Chess960-fork is not yet available), so please send us feedback, comments and suggestions for improvement at fork.chess@gmail.com.
+				This is a beta version of this website (Chess960-fork is not yet available), so please send us feedback, comments and suggestions for improvement at
+				<a href="mailto:fork.chess@gmail.com">fork.chess@gmail.com</a>.
 				<br><br>
 			</div>
         </div>
