--- a/login.html
+++ b/login.html
@@ -64,7 +64,8 @@
 		<br><br>
 		If you play an “independent rating” game, then each board is an independent game. You win, draw or lose in each board and your ELO rating is adjusted several times according to the outcome of the game in each board (as games finish).
 		<br><br>
-		What if you don’t care with your ELO rating? Just have fun and play unrated games! Come join us and play Chess-fork! This is a beta version of this website (for example, the Chess960-fork is not yet available). Bear with us and send us comments and suggestions for improvement at fork.chess@gmail.com.
+		What if you don’t care with your ELO rating? Just have fun and play unrated games! Come join us and play Chess-fork! This is a beta version of this website (for example, the Chess960-fork is not yet available). Bear with us and send us comments and suggestions for improvement at
+		<a href="mailto:fork.chess@gmail.com">fork.chess@gmail.com</a>.
 		<br><br>
 	</div>
 
