Consist the font of all pages to Helvetica
Signed-off-by: Jiecheng Xu <xjcpdp1995@gmail.com>

--- a/forgot.html
+++ b/forgot.html
@@ -22,6 +22,7 @@
 		}
 		.console{
 			margin-left: 10px;
+			font-size: 14px;
 		}
 		.description{
 			text-align: center;
@@ -36,6 +37,9 @@
 		th, td {
 			padding: 8px;
 			text-align: center;
+		}
+		body{
+			font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 		}
 	</style>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
