--- a/games.html
+++ b/games.html
@@ -27,7 +27,8 @@
       margin: 7px;
     }
     body{
-      margin: 4%
+      margin: 4%;
+      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     }
   </style>
 </head>
