--- a/signup.html
+++ b/signup.html
@@ -30,6 +30,9 @@
 			padding-left: 150px;
 			padding-right: 150px;
 		}
+		body{
+			font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+		}
 	</style>
 </head>
 <body>
@@ -50,7 +53,7 @@
 	<br>
 	<br>
 	<br>
-	<label id="msg" class="console">This is a place to display console message.</label>
+	<label id="msg" class="console"></label>
 	<br><br><br><br>
 	<div class="description">
 		It’s your turn to move. You considering several candidate moves. You aren’t sure which one is better. They may even all seem great. Why don’t you play all of them?
