--- a/challenges.html
+++ b/challenges.html
@@ -14,6 +14,9 @@
 			padding: 8px;
 			text-align: left;
 		}
+		body{
+			font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+		}
 	</style>
 </head>
 <body>
