--- a/login.html
+++ b/login.html
@@ -31,7 +31,11 @@
 			padding-left: 150px;
 			padding-right: 150px;
 		}
+		body{
+			font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+		}
 	</style>
+	<font></font>
 </head>
 <body>
 
