Offer Draw Updated.

--- a/games.html
+++ b/games.html
@@ -89,8 +89,8 @@
           <button id="forkButton_1" class="btn btn-success f_btn" onclick="sendForkRequest(this.parentNode.parentNode.parentNode)" disabled="true" hidden="true">Fork</button>
             <button id="resignButton_1" class="btn btn-success" onclick="sendResignRequest(this.parentNode.parentNode.parentNode)">Resign</button>
             <button id="drawButton_1" class="btn btn-success" onclick="offerDraw(this.parentNode.parentNode.parentNode)">Offer Draw</button>
-              <button id="acceptDrawButton_1"  hidden="true" class="btn btn-success" onclick="acceptOfferDraw(this.parentNode.parentNode.parentNode)">Accept Offer Draw</button>
-              <button id="cancelDrawButton_1"  hidden="true" class="btn btn-success" onclick="cancelOfferDraw(this.parentNode.parentNode.parentNode)">Cancel Offer Draw</button>
+              <button id="acceptDrawButton_1"  hidden="true" class="btn btn-success" onclick="acceptOfferDraw(this.parentNode.parentNode.parentNode)">Accept Draw Offer</button>
+              <button id="cancelDrawButton_1"  hidden="true" class="btn btn-success" onclick="cancelOfferDraw(this.parentNode.parentNode.parentNode)">Cancel Draw Offer</button>
           </div>
       </div>
       <br><br>
