Challenges to 'Your Challenges'. Challenges topRanking to New Game transition corrected.

--- a/profile.html
+++ b/profile.html
@@ -19,7 +19,7 @@
     <div id="sidebar-l">
     	<h1 id="user">User Name: FakeUser123</h1> <br>
     	<button class="side-l btn btn-info" id="newGame" onclick="newGameOnClick()">New Game</button><br>
-		<button class="side-l btn btn-info" id="challenges" onclick="displayChallenges()">Challenges</button><br>
+		<button class="side-l btn btn-info" id="challenges" onclick="displayChallenges()">Your Challenges</button><br>
 		<button class="side-l btn btn-info" id="Rankings" onclick="displayTopRankings()">Top Rankings</button><br>
 		<button class="side-l btn btn-info" id="logOut" onclick="onLogOut()">Log Out</button><br>
     </div>
