--- a/games.html
+++ b/games.html
@@ -42,6 +42,8 @@
   <button id="cancelButton" class="btn btn-success" onclick="cancelGame()">Cancel</button>
   <div id="game_type"></div>
   <div id="player"></div>
+  <div id="oppo"></div>
+  <br>
   <div id="state">Join Game</div>
   <div id="forkCount" hidden="true">
   <strog></strog>
