--- a/homepage.html
+++ b/homepage.html
@@ -27,7 +27,7 @@
         	<div class="game_type_btn">
         		<br>
         		<input type="radio" name="game_type" value="chess" checked> CHESS&nbsp;&nbsp;
-        		<input type="radio" name="game_type" value="chess960"> CHESS960
+        		<input type="radio" name="game_type" value="chess960" disabled="true"> CHESS960
         	</div>
         	<br> 
         	<div class="rating_type_btn">
