--- a/signup.html
+++ b/signup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Sing Up</title>
+	<title>Sign Up</title>
 	<style type="text/css">
 		.logo{
 			float: left;
@@ -22,6 +22,7 @@
 		}
 		.console{
 			margin-left: 10px;
+			font-size: 16px;
 		}
 		.description{
 			text-align: center;
@@ -50,6 +51,8 @@
 	<br>
 	<button style="margin: 10px; width: 100px" onclick="signUp()">Confirm</button>
 	<button style="margin: 10px; width: 100px" onclick="location.href='./'">Cancel</button>
+	<br>
+	<br>
 	<br>
 	<br>
 	<label id="msg" class="console"></label>
