--- a/top_ranking.html
+++ b/top_ranking.html
@@ -25,18 +25,6 @@
     </div>
     <div id="main-wrapper">
         <div id="main">
-        	<!-- The following code allows a wliding button between choosing CHESS and CHESS960, however it is complicate to communicate the data selected with backend, I deided to go with the radio button for version 1.0 and upgrade the UI in the later version. Please do not delete the following code! -->
-
-<!--         	<div class="top_row">
-	        	<div class="slide_btn">
-		        	CLASSIC
-					<label class="switch">
-					  <input type="checkbox">
-					  <span class="slider"></span>
-					</label>
-					CHESS960
-	        	</div>
-        	</div> -->
         	<div class="game_type_btn">
         		<br>
         		<input type="radio" name="game_type" value="chess" checked> CHESS&nbsp;&nbsp;
@@ -57,7 +45,7 @@
         		<input type="radio" name="format_type" value="long"> Long&nbsp;&nbsp;
         	</div>
         	<br>
-        	<button onclick="getTopRanks()">Submit</button>
+        	<button class="btn btn-default" onclick="getTopRanks()">Submit</button>
         	<br><br>
         	<table class="result">
         		<tr>
