Fixed title misspell
Signed-off-by: Jiecheng Xu <xjcpdp1995@gmail.com>

--- a/games.html
+++ b/games.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>Chess 0</title>
+  <title>Chess Fork</title>
   <!--  Including the chessboard.js files:-->
   <!-- <script src="chess.js"></script>  -->
   <link rel="stylesheet" 
